replaced alerts with  error messages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <textarea name="description" id="description" placeholder="Describe activity...(optional)"></textarea>
         <input type="datetime-local" id="due-date" required>
 
-        <button id="add-btn">Add to Task</button>
+        <button id="add-btn">Add to List</button>
 
 
         <div class="sort-btn">
